pfish       2005/11/06 10:08:24 UTC	(20051106-3561)
  Log:
  Use is_ircop instead of is_sra
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/listchans.c (File Modified) 
  +1 -1		trunk/modules/userserv/listchans.c (File Modified) 


pfish       2005/11/06 10:03:16 UTC	(20051106-3559)
  Log:
  fix formatting here
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/listchans.c (File Modified) 


kog         2005/11/06 09:54:37 UTC	(20051106-3557)
  Log:
  MYACCESS -> LISTCHANS.
   - Allows SRAs to get access information about other users.
   - Edited comments to be more clear
   - Module load changes to confs
   - makefile updates
  
  

  Changes:	Modified:
  +2 -2		trunk/dist/example.conf (File Modified) 
  +2 -2		trunk/dist/example.userserv.conf (File Modified) 
  +11 -0	trunk/help/nickserv/listchans (File Added) 
  +0 -11	trunk/help/nickserv/myaccess (File Deleted) 
  +11 -0	trunk/help/userserv/listchans (File Added) 
  +0 -11	trunk/help/userserv/myaccess (File Deleted) 
  +1 -0		trunk/modules/nickserv/Makefile.in (File Modified) 
  +46 -23	trunk/modules/nickserv/listchans.c (File Modified) 
  +2 -1		trunk/modules/userserv/Makefile.in (File Modified) 
  +1 -1		trunk/modules/userserv/Makefile.win32 (File Modified) 
  +124 -0	trunk/modules/userserv/listchans.c (File Added) 
  +0 -98	trunk/modules/userserv/myaccess.c (File Deleted) 


pfish       2005/11/06 09:32:40 UTC	(20051106-3555)
  Log:
  blah

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/Makefile.win32 (File Modified) 


pfish       2005/11/06 09:30:37 UTC	(20051106-3553)
  Log:
  NickServ: Initial MYACCESS->LISTCHANS convert.
  

  Changes:	Modified:
  +102 -1	trunk/modules/nickserv/Makefile.in (File Modified) 
  + -		trunk/modules/nickserv/listchans.c (File Added) 
  +0 -98	trunk/modules/nickserv/myaccess.c (File Deleted) 


alambert    2005/11/06 09:11:45 UTC	(20051106-3551)
  Log:
  gen_salt(): remember to free() the result of gen_pw()

  Changes:	Modified: