@@ -4,13 +4,13 @@
  *
  * This file contains protocol support for bahamut-based ircd.
  *
- * $Id: unreal.c 3203 2005-10-25 22:22:40Z jilles $
+ * $Id: unreal.c 3565 2005-11-06 14:17:51Z jilles $
  */
 
 #include "atheme.h"
 #include "protocol/unreal.h"
 
-DECLARE_MODULE_V1("protocol/unreal", TRUE, _modinit, NULL, "$Id: unreal.c 3203 2005-10-25 22:22:40Z jilles $", "Atheme Development Group <http://www.atheme.org>");
+DECLARE_MODULE_V1("protocol/unreal", TRUE, _modinit, NULL, "$Id: unreal.c 3565 2005-11-06 14:17:51Z jilles $", "Atheme Development Group <http://www.atheme.org>");
 
 /* *INDENT-OFF* */
 
@@ -390,12 +390,12 @@ static void m_sjoin(char *origin, uint8_t parc, char *parv[])
 	if (parc >= 4)
 	{
 		/* :origin SJOIN ts chan modestr [key or limits] :users */
-		modev[0] = parv[2];
+		modev[modec++] = parv[2];
 
 		if (parc > 4)
-			modev[++modec] = parv[3];
+			modev[modec++] = parv[3];
 		if (parc > 5)
-			modev[++modec] = parv[4];
+			modev[modec++] = parv[4];
 
 		c = channel_find(parv[1]);
 		ts = atol(parv[0]);
@@ -491,6 +491,7 @@ static void m_sjoin(char *origin, uint8_t parc, char *parv[])
 	else if (parc == 2)
 	{
 		c = channel_find(parv[1]);
+		/* XXX what if the channel doesn't exist? */
 		ts = atol(parv[0]);
 
 		if (ts < c->ts)
@@ -519,9 +520,9 @@ static void m_sjoin(char *origin, uint8_t parc, char *parv[])
 			slog(LG_INFO, "m_sjoin(): TS changed for %s (%ld -> %ld)", c->name, c->ts, ts);
 
 			c->ts = ts;
+			/* XXX lost modes! */
 		}
 
-		channel_mode(NULL, c, modec, modev);
 		chanuser_add(c, origin);
 	}
 }
