@@ -1,3 +1,11 @@
+nenolod     2005/11/06 10:13:36 UTC	(20051106-3563)
+  Log:
+  Forgot something when I applied the patch.
+
+  Changes:	Modified:
+  +2 -1		trunk/backend/postgresql.c (File Modified) 
+
+
 pfish       2005/11/06 10:08:24 UTC	(20051106-3561)
   Log:
   Use is_ircop instead of is_sra
